addd global PCA & Kmeans notebook

--- a/scripts/notebooks/han/013_download_from_minio.ipynb
+++ b/scripts/notebooks/han/013_download_from_minio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "2724f27b-806f-421a-9723-c9d27bdfb491",
    "metadata": {
     "tags": []
@@ -18,6 +18,8 @@
     "# from tqdm.auto import tqdm\n",
     "from tqdm import tqdm\n",
     "\n",
+    "import re\n",
+    "\n",
     "import time\n",
     "\n",
     "import msgpack\n",
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4af3679a-37e7-47df-b42f-195689c1e69b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bea01f41-fe89-45f5-b442-2e029b5fed0e",
    "metadata": {
     "tags": []
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5006c10c-6f19-40a3-9b7a-d2eac02e10c1",
    "metadata": {
     "tags": []
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "45e3011e-b999-4d0e-9a41-6e112b43afd2",
    "metadata": {
     "tags": []
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c744c2df-88d4-4875-bd0d-eb8d46a53ebe",
    "metadata": {
     "tags": []
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6fc4349a-c2ec-4366-ab18-ed33816de15a",
    "metadata": {},
    "outputs": [
@@ -146,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                         \r"
+      "                                                          \r"
      ]
     }
    ],
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6bb2d8ad-cd42-4483-b8af-cdbd185fc9e4",
    "metadata": {
     "tags": []
@@ -190,8 +192,20 @@
     "    \n",
     "    for file_name in tqdm(file_paths, leave=False):\n",
     "            \n",
-    "        # output_path = file_name.replace('.jpg', '_clip.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'clip/{dataset_name}/'))\n",
-    "        # file_name = file_name.replace('.jpg', '_clip.msgpack').replace('datasets/', '')\n",
+    "        output_path = file_name.replace('.jpg', '_clip.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'clip/{dataset_name}/'))\n",
+    "        file_name = file_name.replace('.jpg', '_clip.msgpack').replace('datasets/', '')\n",
+    "\n",
+    "        if os.path.exists(output_path):\n",
+    "            continue\n",
+    "        \n",
+    "        try:\n",
+    "            client.fget_object(bucket_name, file_name, output_path)\n",
+    "        except KeyboardInterrupt:\n",
+    "            break\n",
+    "        except:\n",
+    "            continue\n",
+    "    \n",
+    "    for file_name in tqdm(file_paths, leave=False):\n",
     "            \n",
     "        output_path = file_name.replace('.jpg', '_data.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'data/{dataset_name}/'))\n",
     "        file_name = file_name.replace('.jpg', '_data.msgpack').replace('datasets/', '')\n",
@@ -213,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b0637410-6323-4aa0-8356-2b5585aa2439",
    "metadata": {
     "tags": []
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3f78ba4e-47b0-4611-8d31-70ef5d8f3f18",
    "metadata": {},
    "outputs": [],
@@ -290,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "0a462a66-db66-46a1-81e9-4c42e5771850",
    "metadata": {},
    "outputs": [
@@ -309,218 +323,76 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9468f456-b93b-4141-a054-4215da6697c3",
+   "metadata": {},
+   "source": [
+    "# download latest folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "26040c3b-4884-415f-847e-68380853996c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_latest_folders(dataset_name, n_folders):\n",
+    "\n",
+    "    folders = list()\n",
+    "    for i in client.list_objects(bucket_name, dataset_name + '/', recursive=False):\n",
+    "        name = i.object_name\n",
+    "        results = re.search(r'/(\\d+)/', name)\n",
+    "        if results is None:\n",
+    "            continue\n",
+    "        folders.append(results.groups()[0])\n",
+    "    \n",
+    "    for folder in sorted(folders)[-n_folders:]:\n",
+    "        for i in tqdm(client.list_objects(bucket_name, f'{dataset_name}/{folder}', recursive=True), leave=False):\n",
+    "            object_name = i.object_name\n",
+    "            \n",
+    "            if object_name.lower().endswith('_clip.msgpack'):\n",
+    "                out_path = os.path.join(ROOT, 'clip', object_name)\n",
+    "            elif object_name.lower().endswith('_data.msgpack'):\n",
+    "                out_path = os.path.join(ROOT, 'data', object_name)\n",
+    "            else:\n",
+    "                continue\n",
+    "            \n",
+    "            if os.path.exists(out_path):\n",
+    "                continue\n",
+    "                \n",
+    "            try:\n",
+    "                client.fget_object(bucket_name, object_name, out_path)\n",
+    "            except KeyboardInterrupt:\n",
+    "                break\n",
+    "            except:\n",
+    "                continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1f2c6cfe-9084-4e80-be69-9654223b1d4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                           \r"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_name in DATASETs:\n",
+    "    download_latest_folders(dataset_name, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd6ac02f-2e0e-45de-8925-c4b11e1edf62",
    "metadata": {},
    "source": [
-    "# download whole dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "280a6084-d26a-4703-aa4e-92de867d6727",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dataset_name in DATASETs:\n",
-    "    objects = list()\n",
-    "    for i in tqdm(client.list_objects(bucket_name, dataset_name, recursive=True)):\n",
-    "        objects.append(i)\n",
-    "    # objects = sorted(objects, key=lambda x: x.object_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "bc0bd6d0-73af-4f4a-b0e7-f40c009174e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "123053"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len([i for i in objects if i.object_name.endswith('.jpg')])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "d09eb77b-1cfa-4cc1-8c02-51f413cc0d24",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e44f9639419049878de864cba7cdc1aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/12306 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "for obj in tqdm([i for i in objects if i.object_name.endswith('.jpg')][::10]):\n",
-    "# for obj in tqdm(objects):\n",
-    "    \n",
-    "    object_name = obj.object_name\n",
-    "    \n",
-    "    # if not object_name.lower().endswith((\".jpg\", \".png\", \".jpeg\")):\n",
-    "    #     continue\n",
-    "    # out_path = os.path.join(ROOT, 'image', object_name)\n",
-    "    \n",
-    "    # if not object_name.lower().endswith('_clip.msgpack'):\n",
-    "    #     continue\n",
-    "    # out_path = os.path.join(ROOT, 'clip', object_name)\n",
-    "\n",
-    "    if object_name.lower().endswith((\".jpg\", \".png\", \".jpeg\")):\n",
-    "        out_path = os.path.join(ROOT, 'image', object_name)\n",
-    "    # if object_name.lower().endswith('_clip.msgpack'):\n",
-    "    #     out_path = os.path.join(ROOT, 'clip', object_name)\n",
-    "    # elif object_name.lower().endswith('_data.msgpack'):\n",
-    "    #     out_path = os.path.join(ROOT, 'data', object_name)\n",
-    "    # elif object_name.lower().endswith('.json') and '/ranking/aggregate/' in object_name.lower():\n",
-    "    #     out_path = os.path.join(ROOT, 'ranking', object_name.replace('/data/ranking/aggregate/', '/'))\n",
-    "    else:\n",
-    "        continue\n",
-    "    \n",
-    "    if os.path.exists(out_path):\n",
-    "        continue\n",
-    "    \n",
-    "    try:\n",
-    "        client.fget_object(bucket_name, object_name, out_path)\n",
-    "    except KeyboardInterrupt:\n",
-    "        break\n",
-    "    except:\n",
-    "        continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "82d81121-2cf4-445e-b8fc-6ec0e64cb3b9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "image_paths = list()\n",
-    "\n",
-    "for dname in os.listdir(os.path.join(ROOT, 'image', dataset_name)):\n",
-    "    for fname in os.listdir(os.path.join(ROOT, 'image', dataset_name, dname)):\n",
-    "        if not fname.endswith('.jpg'):\n",
-    "            continue\n",
-    "        image_paths.append(os.path.join(dataset_name, dname, fname))\n",
-    "\n",
-    "# for dname in os.listdir(os.path.join(ROOT, 'clip', dataset_name)):\n",
-    "#     for fname in os.listdir(os.path.join(ROOT, 'clip', dataset_name, dname)):\n",
-    "#         if not fname.endswith('_clip.msgpack'):\n",
-    "#             continue\n",
-    "#         image_paths.append(os.path.join(dataset_name, dname, fname))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "c1b1ae8d-ad46-47c5-b0fa-309e841b15ca",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0de26357f07641a19209fc3564c54164",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8816 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "for path in tqdm(image_paths):\n",
-    "    \n",
-    "    # object_name = path.replace('_clip.msgpack', '_data.msgpack')\n",
-    "    \n",
-    "    object_name = path.replace('.jpg', '_data.msgpack')\n",
-    "    out_path = os.path.join(ROOT, 'data', object_name)\n",
-    "    \n",
-    "    # object_name = path.replace('.jpg', '_clip.msgpack')\n",
-    "    # out_path = os.path.join(ROOT, 'clip', object_name)\n",
-    "    \n",
-    "    if os.path.exists(out_path):\n",
-    "        continue\n",
-    "    \n",
-    "    try:\n",
-    "        client.fget_object(bucket_name, object_name, out_path)\n",
-    "    except KeyboardInterrupt:\n",
-    "        break\n",
-    "    except:\n",
-    "        continue\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "fb48d9ad-4283-4230-aa6b-eb72740e2052",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2dfa5f5f7844ee3914a7c7ded9d2495",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8816 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "for path in tqdm(image_paths):\n",
-    "    \n",
-    "    # object_name = path.replace('_clip.msgpack', '_data.msgpack')\n",
-    "    \n",
-    "    # object_name = path.replace('.jpg', '_data.msgpack')\n",
-    "    # out_path = os.path.join(ROOT, 'data', object_name)\n",
-    "    \n",
-    "    object_name = path.replace('.jpg', '_clip.msgpack')\n",
-    "    out_path = os.path.join(ROOT, 'clip', object_name)\n",
-    "    \n",
-    "    if os.path.exists(out_path):\n",
-    "        continue\n",
-    "    \n",
-    "    try:\n",
-    "        client.fget_object(bucket_name, object_name, out_path)\n",
-    "    except KeyboardInterrupt:\n",
-    "        break\n",
-    "    except:\n",
-    "        continue\n",
-    "    "
+    "# save npz"
    ]
   },
   {
