--- a/scripts/notebooks/han/029_active_learning.ipynb
+++ b/scripts/notebooks/han/029_active_learning.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3d3fa0b4-d4cb-44fa-b8d9-5bc3d0d26bca",
    "metadata": {
     "tags": []
@@ -83,25 +83,37 @@
     "import numpy as np\n",
     "\n",
     "import os\n",
+    "import sys\n",
     "import json\n",
+    "\n",
+    "import msgpack\n",
     "\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "import torch\n",
-    "\n",
-    "from script.pairs import get_candidate_pairs_by_score, get_candidate_pairs_by_embedding, embedding_to_category, get_candidate_pairs_within_category\n",
-    "from script.samples import get_min_distance_to_representative_samples\n",
-    "from utils import get_score_from_embs"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "edc51109-4a36-4468-8c63-4062cc52dd50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.path.abspath('../kcg-ml-image-pipeline/'))\n",
+    "\n",
+    "from utility.active_learning.pairs import get_candidate_pairs_by_score, get_candidate_pairs_by_embedding, embedding_to_category, get_candidate_pairs_within_category\n",
+    "from utility.active_learning.samples import get_min_distance_to_representative_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "4621601d-a939-4ab3-bbfa-bf29eddc439f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT = '../kcg-ml-image-pipeline/output/dataset/'\n",
+    "ROOT = '../dataset/'\n",
     "\n",
     "DATASETs = [\n",
     "    'environmental', \n",
@@ -112,7 +124,7 @@
     "    'propaganda-poster'\n",
     "]\n",
     "\n",
-    "SAVE_DIR = './result/1130/'"
+    "SAVE_DIR = './result/active_learning/1218/'"
    ]
   },
   {
@@ -125,6 +137,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "09b681da-76bb-42c6-bb0c-ace594ceb590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_name = DATASETs[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73b3cd8f-b772-4651-ad05-f9e4c50c0e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score_from_embs(embs, model, batch_size, preprocess=None):\n",
+    "    \n",
+    "    scores = list()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        with torch.cuda.amp.autocast(True):\n",
+    "    \n",
+    "            for i in tqdm(range(0, len(embs), batch_size), leave=False):\n",
+    "                \n",
+    "                x = torch.tensor(embs[i:i+batch_size]).cuda().half()\n",
+    "                \n",
+    "                if preprocess is not None:\n",
+    "                    x = preprocess(x)\n",
+    "    \n",
+    "                score = model(x)[..., 0]\n",
+    "    \n",
+    "                scores.append(score.detach().cpu().numpy())\n",
+    "\n",
+    "    scores = np.concatenate(scores, axis=0)\n",
+    "    \n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "a347f4e3-3e96-4cd5-a0ed-55e2310c05de",
    "metadata": {},
@@ -133,41 +185,45 @@
     "def save_image_info(dataset_name):\n",
     "\n",
     "    #\n",
-    "\n",
-    "    emb_path = os.path.join('./data', dataset_name, 'clip_vision_emb.npz')\n",
     "    \n",
-    "    npz = np.load(emb_path, allow_pickle=True)\n",
+    "    js = json.load(open(f'data/{dataset_name}/data.json'))\n",
     "    \n",
-    "    samples = npz['image_embeds'].astype('float32')\n",
+    "    job_uuids = list()\n",
+    "    samples = list()\n",
     "    \n",
-    "    file_paths = npz['file_paths']\n",
-    "    file_paths = [os.path.splitext(file_path.split('_')[0])[0] for file_path in file_paths]\n",
-    "    path_to_index = {file_path: i for i, file_path in enumerate(file_paths)}\n",
+    "    for info in tqdm(js.values(), total=len(js), leave=False):\n",
+    "    \n",
+    "        file_path = os.path.splitext(info['file_path'].split('_')[0])[0]\n",
+    "        \n",
+    "        path = os.path.join(ROOT, 'clip', f'{file_path}_clip.msgpack')\n",
+    "    \n",
+    "        with open(path, 'rb') as f:\n",
+    "            mp = msgpack.load(f)\n",
+    "    \n",
+    "        job_uuids.append(info['job_uuid'])\n",
+    "        samples.append(np.array(mp['clip-feature-vector']))\n",
+    "    \n",
+    "    job_uuids = np.array(job_uuids)\n",
+    "    samples = np.concatenate(samples, axis=0)\n",
     "\n",
     "    #\n",
-    "    \n",
-    "    pmt_path = os.path.join('./data', dataset_name, 'prompt.json')\n",
-    "    \n",
-    "    prompts = json.load(open(pmt_path))\n",
-    "    \n",
-    "    path_to_hash = {j['file_path'].split('_')[0]:i for i, j in prompts.items()}\n",
-    "    path_to_uuid = {j['file_path'].split('_')[0]: j['job_uuid'] for i, j in prompts.items()}\n",
-    "    # uuid_to_path = {j: i for i, j in path_to_uuid.items()}\n",
-    "    \n",
+    "        \n",
     "    df = pd.DataFrame(\n",
-    "        zip(file_paths, map(path_to_hash.get, file_paths), map(path_to_uuid.get, file_paths)), \n",
-    "        columns=['file_path', 'file_hash', 'job_uuid']\n",
+    "        job_uuids.reshape(-1, 1), \n",
+    "        columns=['job_uuid']\n",
     "    )\n",
     "    \n",
     "    # score\n",
     "    \n",
-    "    vision_weight_path = os.path.join('./weight/004', dataset_name, 'clip_vision.pt')\n",
-    "    \n",
     "    vision_model = torch.nn.Linear(samples.shape[-1], 1, bias=True).cuda().eval()\n",
-    "    vision_model.load_state_dict(torch.load(vision_weight_path))\n",
+    "    vision_model.load_state_dict(torch.load(os.path.join('./weight/004', dataset_name, 'clip_vision.pt')))\n",
     "\n",
+    "    npz = np.load(os.path.join('./weight/004', dataset_name, 'clip_vision.npz'))\n",
+    "    mean, std = npz['mean'], npz['std']\n",
+    "    \n",
     "    score = get_score_from_embs(samples, vision_model, batch_size=1024)\n",
-    "    df['sigma_score'] = (score - score.mean()) / score.std()\n",
+    "    \n",
+    "    df['sigma_score'] = (score - mean) / std\n",
     "    \n",
     "    # distance\n",
     "    \n",
@@ -432,373 +488,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "f3278ce8-1c66-49ce-98e6-5ea43bbc6775",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "from minio import Minio\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "from tqdm.auto import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "c51ed09e-07d4-4cd8-b589-322ccdded2e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class API:\n",
-    "\n",
-    "    def __init__(self, api_url: str, display: bool = False, **kwargs):\n",
-    "        self.api_url = api_url\n",
-    "        self.display = display\n",
-    "        self.kwargs = kwargs\n",
-    "\n",
-    "    def get(self, url: str, data: dict = None, return_content: bool = True, **kwargs):\n",
-    "        \n",
-    "        kwargs_ = dict(**self.kwargs)\n",
-    "        kwargs_.update(kwargs)\n",
-    "        if data is not None:\n",
-    "            kwargs_['params'] = data\n",
-    "\n",
-    "        response = requests.get(f'{self.api_url}/{url}', **kwargs_)\n",
-    "\n",
-    "        if return_content:\n",
-    "            if response.status_code != 200:\n",
-    "                raise Exception(f'{url} responded status_code {status_code}')\n",
-    "            return response.content\n",
-    "        return response\n",
-    "        \n",
-    "    def post(self, data, **kwargs):\n",
-    "        pass\n",
-    "\n",
-    "    def get_rank_list(self, dataset: str):\n",
-    "\n",
-    "        content = self.get('datasets/rank/list', data={'dataset': dataset})\n",
-    "\n",
-    "        return json.loads(content)\n",
-    "\n",
-    "    # def get_rank_infos(self, dataset: str, filenames: list):\n",
-    "\n",
-    "    #     infos = list()\n",
-    "\n",
-    "    #     for filename in tqdm(filenames, leave=False, disable=not self.display):\n",
-    "\n",
-    "    #         info = None\n",
-    "            \n",
-    "    #         try:\n",
-    "                \n",
-    "    #             content = self.get(\n",
-    "    #                 'datasets/rank/read', \n",
-    "    #                 data={\n",
-    "    #                     'dataset': dataset,\n",
-    "    #                     'filename': filename\n",
-    "    #                 },\n",
-    "    #                 return_content=False\n",
-    "    #             )\n",
-    "\n",
-    "    #             if content.status_code == 200:\n",
-    "    #                 info = json.loads(content)\n",
-    "            \n",
-    "    #         except KeyboardInterrupt:\n",
-    "    #             break\n",
-    "    #         except:\n",
-    "    #             pass\n",
-    "\n",
-    "    #         infos.append(info)\n",
-    "\n",
-    "    #     return infos\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0b9d60c3-a81a-437e-8e38-164d0302c894",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_url = 'http://123.176.98.90:8764'\n",
-    "dataset = 'mech'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "120cfef5-ce68-4dbd-b348-9e19bb7c921a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api = API(api_url, display=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cfb11299-f74b-4134-a7bf-ab3f498de2f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank_result_file_paths = api.get_rank_list(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "dd6fddd2-0576-42c1-9014-c01cef8ebb59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank_result_file_names = [os.path.split(file_path)[-1] for file_path in rank_result_file_paths]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bc462f4-53b0-4e28-979d-9e9b31d63fc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# infos = api.get_rank_infos(dataset, rank_result_file_names)\n",
-    "infos = list(tqdm(\n",
-    "    map(lambda file_name: get_file_from_minio(client, bucket_name, file_name), rank_result_file_paths), \n",
-    "    leave=False, total=len(rank_result_file_paths)\n",
-    "))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "7c4d2fa4-aec1-482e-ad8c-074cd1cf8548",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'mech/data/ranking/aggregate/2023-10-23-15-50-38-mert.json'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rank_result_file_paths[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "5b01b523-dba7-4950-923f-021519be6ff2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MINIO_ADDRESS = \"123.176.98.90:9000\"\n",
-    "access_key = \"GXvqLWtthELCaROPITOG\"\n",
-    "secret_key = \"DmlKgey5u0DnMHP30Vg7rkLT0NNbNIGaM8IwPckD\"\n",
-    "bucket_name = 'datasets'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "e6ecf750-3a3b-4ea7-af55-6e6d02d9dc38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def connect_to_minio(minio_addr, access_key, secret_key):\n",
-    "    # Initialize the MinIO client\n",
-    "    client = Minio(minio_addr, access_key, secret_key, secure=False)\n",
-    "\n",
-    "    #Check server status\n",
-    "    try:\n",
-    "        response = requests.get(\"http://\" + minio_addr + \"/minio/health/live\", timeout=5)\n",
-    "        if response.status_code == 200:\n",
-    "            print(\"Connected to MinIO server.\")\n",
-    "        else:\n",
-    "            return None\n",
-    "    except requests.RequestException as e:\n",
-    "        return None\n",
-    "    \n",
-    "    return client\n",
-    "\n",
-    "def get_file_from_minio(client, bucket_name, file_name):\n",
-    "    try:\n",
-    "        # Get object data\n",
-    "        data = client.get_object(bucket_name, file_name)\n",
-    "\n",
-    "        return data\n",
-    "\n",
-    "    except Exception as err:\n",
-    "        print(f\"Error: {err}\")\n",
-    "\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "45e3011e-b999-4d0e-9a41-6e112b43afd2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to MinIO server.\n"
-     ]
-    }
-   ],
-   "source": [
-    "client = connect_to_minio(MINIO_ADDRESS, access_key, secret_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9f5ea26-240b-43e2-ac60-11163ab69786",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_obj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "c744c2df-88d4-4875-bd0d-eb8d46a53ebe",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'client' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mdir\u001b[39m(\u001b[43mclient\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'client' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "client.get_object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a18e7c69-388e-44a9-b35e-08a43a47087e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "objects = client.list_objects(bucket_name, dataset_name, recursive=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "2b991575-8840-4177-9025-dd976a42e6a9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9768442bfd0465ab128320699721d8f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "objects = list(tqdm(objects))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d09eb77b-1cfa-4cc1-8c02-51f413cc0d24",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fcddff4c691434eafcdeb127d636b2e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1960419 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "for obj in tqdm(objects):\n",
-    "    \n",
-    "    object_name = obj.object_name\n",
-    "    \n",
-    "    # if not object_name.lower().endswith((\".jpg\", \".png\", \".jpeg\")):\n",
-    "    #     continue\n",
-    "    # out_path = os.path.join(ROOT, 'image', object_name)\n",
-    "    \n",
-    "    # if not object_name.lower().endswith('_clip.msgpack'):\n",
-    "    #     continue\n",
-    "    # out_path = os.path.join(ROOT, 'clip', object_name)\n",
-    "\n",
-    "    if object_name.lower().endswith('_clip.msgpack'):\n",
-    "        out_path = os.path.join(ROOT, 'clip', object_name)\n",
-    "    elif object_name.lower().endswith('_data.msgpack'):\n",
-    "        out_path = os.path.join(ROOT, 'data', object_name)\n",
-    "    else:\n",
-    "        continue\n",
-    "    \n",
-    "    if os.path.exists(out_path):\n",
-    "        continue\n",
-    "        \n",
-    "    try:\n",
-    "        client.fget_object(bucket_name, object_name, out_path)\n",
-    "    except KeyboardInterrupt:\n",
-    "        break\n",
-    "    except:\n",
-    "        continue"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kk",
+   "display_name": "My Environment",
    "language": "python",
-   "name": "kk"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -810,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
